# modding-toolkit

./: CHANGELOG.md  README.md  install.bat
local/: .gitignore  Cargo.toml  build_client_mods.sh
local/.cargo/: config.toml
local/client_mod_loader/: Cargo.toml  build.rs  exports.def
local/client_mod_loader/src/: lib.rs
local/mods/client/auth_injector/: Cargo.toml
local/mods/client/auth_injector/src/: lib.rs
local/mods/client/devmenu_imgui/: .gitignore  CMakeLists.txt  build_mingw.sh  devmenu_imgui.cpp
local/mods/client/devmenu_qt/: devmenu_qt.c
local/mods/client/modding_debugger/: Cargo.toml
local/mods/client/modding_debugger/src/: lib.rs
local/mods/client/pathfinder/src/: lib.rs
local/mods/client/qt_devmenu/: Cargo.toml
local/mods/client/qt_devmenu/qt_ui/: CMakeLists.txt  DevMenuWindow.cpp  DevMenuWindow.h  build_mingw.sh  build_windows.bat  devmenu_qt.cpp  devmenu_qt.h
local/mods/client/qt_devmenu/src/: lib.rs  window.rs
local/mods/client/server_router/: Cargo.toml  Cargo.toml.real  build.rs
local/mods/client/server_router/src/: lib.rs  lib.rs.real
local/mods/client/tdm_helper/src/: lib.rs
local/mods/server/match_tracker/: Cargo.toml
local/mods/server/match_tracker/src/: lib.rs  match_state.rs
local/sdk/game_base/src/: offsets.rs  offsets_client.rs
local/sdk/game_base/src/funcs/: f_name.rs
local/sdk/injection_utils/: Cargo.toml
local/sdk/injection_utils/src/hooks/: console.rs  console_open.rs  keyboard.rs  mod.rs
local/sdk/ue_types/src/interface/: u_console.rs
