[package]
name = "modding_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types = { workspace = true }
game_base = { workspace = true }
injection_utils = { workspace = true }
utils = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt", "minwindef"] }