[package]
name = "qt_devmenu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ue_types      = { workspace = true }
game_base     = { workspace = true }
injection_utils = { workspace = true }
utils         = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "minwindef"] }
